Improve flashcard layout, fix overlap issues, improve long keyword wrap
- do not break Japanese words, easier to read (word-break: keep-all)
- improve layout, make space for the keyword so it does not overlap the
  kanji sometimes when keyword is long
- simplify some of the css
- scale the text for the example vocab compound & reading, if it is > 4
  characters use slightly smaller font so it fits on one line (usually)
- fix #357 where keyword was clipping into the Edit Flashcard button
  (use a right margin)

Fixes Long keywords wrapping on Android App #357

--- a/src/vite/src/assets/css/components/DictList.css
+++ b/src/vite/src/assets/css/components/DictList.css
@@ -24,15 +24,11 @@
   font-weight: normal;
   font-size: 26px;
 }
-.dict-list .dl_t .c {
-  font-size: 1em;
-  padding: 5px 8px 3px;
-}
 .dict-list .dl_t .r {
   font-size: 0.8em;
   padding: 0;
   display: inline-block;
-  margin: 0 0 0 1em;
+  margin-left: 0.5rem;
   color: #543;
 }
 
@@ -89,7 +85,7 @@
 /* box-ing the compound for separation */
 .vocab_c {
   display: inline-block;
-  padding: 3px 8px;
+  padding: 3px 8px 4px;
   border-radius: 8px;
   background: #efeeed;
   color: #210;
